analogue Change Log

Version 0.4-4 TO BE

   * Updated the Version: field in DESCRIPTION to meet new
     standards introduced in R 2.6.0 for licence files.
     Reported by Kurt Hornik.
     
   * join() now returns a object of class "join" or 
     c("join", "data.frame") depending on argument split.

Version 0.4-3

   * distance() would work even if factors in x and y had
     different levels. This would result in incorrect 
     dissimilarities for method = "mixed". distance() now
     issues an error if one or more factors have different
     levels in x and y. Use join() to get correct factors
     and levels. Reported by Birgit Lemcke.

   * join() was not correctly merging data frames with factors.
     Factors were converted to internal values, not levels via
     sapply(). Now uses data.frame(lapply(...)) to maintain
     factors intact.
     
   * distance() was not setting the row / column names in the
     case where both x and y were supplied.
     
   * distance() was incorrectly trying to set row / column
     names in the case where a single dissimilarity was being
     calculated.

   * Documentation fixes.
	
Version 0.4-2

   * New fitted method for bootstrap.map. Returns the bootstrap
     fitted values for the training set.

   * getK<- changed to setK<- as this makes much more sense.
     The extractor function getK remains the same.
     
   * Fixed a couple of bugs in residuals.bootstrap.mat and
     print.residuals.bootstrap.mat that affected how the
     results were printed. Now does what it was supposed to do.
     
   * Fixed minor bug in the code that updated the call in
     analog.

   * Added automagical printing of version number on loading
     of the package.
     
   * Numerous documentation tweaks and updates have been
     applied, which simplify package checking and which 
     provide better documentation of certain comples returned
     objects.

Version 0.4-1

   * Fixed silly bug in RMSEP.bootstrap.mat.

Version 0.4-0
